# Chord

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: index.html  package.json  vitest.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: api_server.rs  commands.rs  lib.rs  main.rs  state.rs
app/src/audio-editor/: AudioEditor.tsx  CLAUDE.md  SpectralView.tsx  WaveformEditor.tsx  audio-editor.test.ts  index.ts  operations.ts  store.ts  types.ts
app/src/bridge/: bridge.test.ts  bridge.ts  index.ts  mcp-sync.ts  (+1 more)
chord-site/: index.html  package-lock.json  package.json
chord-site/src/: App.tsx  index.css
crates/audio-graph/: CLAUDE.md  Cargo.toml
crates/audio-io/: CLAUDE.md  Cargo.toml
crates/chord-wasm/: Cargo.toml
crates/chord-wasm/src/: lib.rs
crates/diagnostics/: CLAUDE.md  Cargo.toml
crates/dsp-runtime/: CLAUDE.md  Cargo.toml
crates/export-engine/: CLAUDE.md  Cargo.toml
crates/export-engine/src/: codegen.rs  lib.rs  manifest.rs  pipeline.rs  target.rs  tests.rs  types.rs  validate.rs
crates/mcp-server/: CLAUDE.md  Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs  recipes.rs  server.rs  sound_planner.rs  tests.rs  tools.rs  types.rs  vibe.rs
crates/midi-engine/: CLAUDE.md  Cargo.toml
crates/node-library/: CLAUDE.md  Cargo.toml
crates/node-library/src/: lib.rs  registry.rs  tests.rs
crates/node-library/src/control/: envelope.rs  lfo.rs  mod.rs  note_to_freq.rs  quantizer.rs  sample_and_hold.rs
crates/node-library/src/effects/: chorus.rs  compressor.rs  convolution_reverb.rs  crossfader.rs  delay.rs  eq.rs  filter.rs  gate.rs  limiter.rs  mod.rs  phaser.rs  pitch_shifter.rs  reverb.rs  ring_modulator.rs  spectral.rs  vocoder.rs  waveshaper.rs
crates/node-library/src/midi/: midi_to_freq.rs  mod.rs
crates/node-library/src/sequencers/: euclidean.rs  game_of_life.rs  gravity.rs  markov.rs  mod.rs  polyrhythm.rs  step.rs
crates/node-library/src/sources/: clap.rs  granular.rs  hi_hat.rs  kick_drum.rs  mod.rs  noise.rs  oscillator.rs  snare_drum.rs  tom.rs
crates/node-library/src/utility/: dc_blocker.rs  gain.rs  mixer.rs  mod.rs  output.rs  stereo.rs
crates/node-library/tests/: validate_all_nodes.rs
crates/plugin-host/: CLAUDE.md  Cargo.toml
crates/scripting-runtime/: CLAUDE.md  Cargo.toml
crates/testing-framework/: CLAUDE.md  Cargo.toml
crates/testing-framework/src/: assertions.rs  dft.rs  harness.rs  helpers.rs  lib.rs  node_harness.rs  snapshot.rs  tests.rs
demo-site/: index.html  package-lock.json  package.json
demo-site/src/: App.css  App.tsx  index.css
docs/: BUILD_PLAN.md  api.md  community.md  descriptions.md  desktop.md  dsl.md  examples.md  mcp.md  react.md  sound-design.md  usage-patterns.md  visualizers.md
examples/01-sonic-landing-page/: README.md  next.config.js  package.json
examples/02-dashboard-with-audio/: README.md  index.html  package.json
examples/03-creative-portfolio/: README.md  index.html  package.json
examples/04-game-ui/: README.md  index.html  package.json
examples/05-meditation-app/: README.md  index.html  package.json  tsconfig.json
fusion-site/: index.html  package.json  tailwind.config.js  tsconfig.json
fusion-site/src/: App.tsx  index.css
genesis-site/: index.html  package-lock.json  package.json
genesis-site/src/: App.tsx  index.css
server/api/: CLAUDE.md
server/cloud-storage/: CLAUDE.md
server/community/: Dockerfile  api.ts  package.json  schema.sql
server/search/: CLAUDE.md
server/sync/: CLAUDE.md
void-site/: index.html  package-lock.json  package.json
void-site/src/: App.tsx  index.css
(+221 files in other folders)
