[package]
name = "chord-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "chord_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chord-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
