[package]
name = "chord-export-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chord-audio-graph = { path = "../audio-graph" }
chord-node-library = { path = "../node-library" }
chord-diagnostics = { path = "../diagnostics" }
chord-dsp-runtime = { path = "../dsp-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
