[package]
name = "chord-node-library"
version = "0.1.0"
edition = "2021"

[dependencies]
chord-dsp-runtime = { path = "../dsp-runtime" }
chord-audio-graph = { path = "../audio-graph" }
chord-scripting-runtime = { path = "../scripting-runtime" }

[dev-dependencies]
chord-testing-framework = { path = "../testing-framework" }
