[package]
name = "chord-testing-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
chord-dsp-runtime = { path = "../dsp-runtime" }
chord-audio-graph = { path = "../audio-graph" }
chord-diagnostics = { path = "../diagnostics" }
chord-node-library = { path = "../node-library" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
